<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/filters_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blur_select_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rg_blur_lvs"
            android:checkedButton="@+id/rb_blur_lv_1">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_blur_lv_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_level_0" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_blur_lv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_level_1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_blur_lv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_level_2" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_blur_lv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_level_3" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cancel"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_go" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>